guest account payments method

--- a/app/blocks/button/nd-button.scss
+++ b/app/blocks/button/nd-button.scss
@@ -223,6 +223,36 @@
         height: pxtovw(15, 375);
       }
     }
+
+    &_plus {
+      display: block;
+      background-size: contain;
+      background-position: 50% 50%;
+      background-repeat: no-repeat;
+      background-image: url("data:image/svg+xml,%3Csvg width='14' height='13' viewBox='0 0 14 13' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7 0.5V12.5' stroke='white' stroke-linecap='round'/%3E%3Cpath d='M13 6.5L1 6.5' stroke='white' stroke-linecap='round'/%3E%3C/svg%3E ");
+      width: 14px;
+      height: 14px;
+
+      @include screen('xlg', max, 2) {
+        width: pxtovw(14, 1660);
+        height: pxtovw(14, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(14, 1366);
+        height: pxtovw(14, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(14, 960);
+        height: pxtovw(14, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(14, 375);
+        height: pxtovw(14, 375);
+      }
+    }
   }
 
   &_fw400 {
