--- a/app/blocks/form-elements/radio-button.scss
+++ b/app/blocks/form-elements/radio-button.scss
@@ -58,6 +58,7 @@
     padding: 10px;
     width: 100%;
     transition: border $ease-main, background $ease-main, color $ease-main;
+    overflow: hidden;
 
     @include screen('xlg', max, 2) {
       border-radius: pxtovw(3, 1660);
@@ -154,6 +155,9 @@
     font-weight: inherit;
     line-height: inherit;
     letter-spacing: inherit;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: clip;
 
     &:not(:first-child) {
       margin-left: 9px;
