--- a/app/blocks/form/nd-form.scss
+++ b/app/blocks/form/nd-form.scss
@@ -176,6 +176,10 @@
     position: relative;
     display: block;
     width: 100%;
+
+    &_tac {
+      text-align: center;
+    }
   }
 
   &__title {
