--- a/app/components/space-card/space-card.scss
+++ b/app/components/space-card/space-card.scss
@@ -756,7 +756,7 @@
 
       line-height: (30 / 25);
       font-size: pxtovw(25, 375);
-      text-align-last: left;
+      text-align: left;
       padding-left: 0;
     }
 
