--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -224,6 +224,8 @@ include ../components/offer-panel/offer-panel
 include ../components/offer-short/offer-short
 include ../components/page-header/nd-page-header
 include ../components/page-header/page-header
+include ../components/payment-form/payment-form
+include ../components/payment-method/payment-method
 include ../components/payment-summary/payment-summary
 include ../components/pivot-table/pivot-table
 include ../components/policy/policy
