--- a/app/pages/guest-account/guest-account-payments-add.pug
+++ b/app/pages/guest-account/guest-account-payments-add.pug
@@ -32,6 +32,7 @@ block content
           +nd-side-navigation(nav, 'Payment methods')._profile
 
       +nd-content-main
+        +payment-form
 
 block panels
 
