--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -45,5 +45,5 @@ block content
           +nd-link(href="guest-account-rents.html") Spacepool - Guest Account - My rents (guest-account-rents.html)
           +nd-link(href="guest-account-rents-empty.html") Spacepool - Guest Account - My rents | Empty  (guest-account-rents-emptyhtml)
           +nd-link(href="guest-account-viewings.html") Spacepool - Guest Account - My viewings (guest-account-viewings.html)
-          //- +nd-link(href="guest-account-payments.html") Spacepool - Guest Account - Payment methods (guest-account-payments.html)
-          //- +nd-link(href="guest-account-payments-add.html") Spacepool - Guest Account - Payment methods | Add (guest-account-payments-add.html)
+          +nd-link(href="guest-account-payments.html") Spacepool - Guest Account - Payment methods (guest-account-payments.html)
+          +nd-link(href="guest-account-payments-add.html") Spacepool - Guest Account - Payment methods | Add (guest-account-payments-add.html)
