--- a/app/blocks/grid/nd-grid.scss
+++ b/app/blocks/grid/nd-grid.scss
@@ -71,6 +71,26 @@
     }
   }
 
+  &_int37 {
+    margin-top: -37px;
+
+    @include screen('xlg', max, 2) {
+      margin-top: pxtovw(-37, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      margin-top: pxtovw(-37, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      margin-top: pxtovw(-37, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      margin-top: pxtovw(-23, 375);
+    }
+  }
+
   &__col {
     display: inline-block; // fallback для старых браузеров
     box-sizing: border-box;
@@ -193,6 +213,26 @@
 
       @include screen('sm', max, 2) {
         padding-top: pxtovw(28, 375);
+      }
+    }
+
+    #{$b}_int37 & {
+      padding-top: 37px;
+
+      @include screen('xlg', max, 2) {
+        padding-top: pxtovw(37, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        padding-top: pxtovw(37, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        padding-top: pxtovw(37, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        padding-top: pxtovw(23, 375);
       }
     }
   }
