--- a/app/blocks/info-tooltip/info-tooltip.pug
+++ b/app/blocks/info-tooltip/info-tooltip.pug
@@ -2,3 +2,8 @@ mixin info-tooltip()
   +b.info-tooltip&attributes(attributes)
     +icon('info2').__icon
     block
+
+mixin nd-info-tooltip()
+  +b.info-tooltip&attributes(attributes)
+    +e.icon i
+    block
