--- a/app/components/content/nd-content.scss
+++ b/app/components/content/nd-content.scss
@@ -249,4 +249,54 @@
       }
     }
   }
+
+  &__buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+
+    &:not(:first-child) {
+      margin-top: 69px;
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(69, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(69, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(69, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(40, 375);
+      }
+    }
+  }
+
+  &__button {
+    &_add {
+      min-width: 507px;
+
+      @include screen('xlg', max, 2) {
+        min-width: pxtovw(507, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        min-width: pxtovw(507, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        min-width: pxtovw(507, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        min-width: 0;
+        width: 100%;
+      }
+    }
+  }
 }
