--- a/app/pages/ui-kit/nd-ui-kit.pug
+++ b/app/pages/ui-kit/nd-ui-kit.pug
@@ -141,6 +141,7 @@ block content
           li
             +nd-form-box('.nd-choices')
               +nd-select().js-nd-select(name="v4")
+                option(placeholder)
                 each item in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
                   option(value=item) option #{item}
           li
