--- a/app/blocks/form-elements/nd-select.scss
+++ b/app/blocks/form-elements/nd-select.scss
@@ -934,7 +934,7 @@
       @include screen('sm', max, 2) {
         padding-left: pxtovw(20, 375);
         padding-right: pxtovw(20, 375);
-        border-top: auto;
+        border-top: none;
         border-bottom: 1px solid $nd-color-field-border;
       }
     }
